--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @import url("https://unpkg.com/@tailwindcss/typography@0.2.x/dist/typography.min.css");
 @import url("https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 .cursive {
-  font-family: "Amatic SC", cursive;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
 
